--- a/src/definir-horarios/view/style-horario.css
+++ b/src/definir-horarios/view/style-horario.css
@@ -13,299 +13,308 @@ body {
 html {
     scroll-behavior: smooth;
 }
-
-.max-width {
-    max-width: 1300px;
-    padding: 0 80px;
-    margin: auto;
-}
 /*Fim System*/
 
 /*Início Style*/
 .container {
-    display: flex;
     justify-content: center;
-    height: 130vh;
+    height: 1000px;
     width: 100%;
     background-color: #fff;
     position: relative
 }
 
-.content-dia {
-    width: 100vw;
-    height: 400px;
-    background: #111;
+.sets {
+    display: flex;
+    justify-content: center;
+    height: 300px;
+    width: 100%;
+    background-color: #111;
+    position: relative
 }
 
-.semana-grid {
-    display: grid;
-    column-gap: 50px;
-    position: absolute;
-}
-
-.dia-1 {
-    background-color: #059481;
-    border: 3px solid #059481;
-    color: #fff;
-    font-size: 20px;
-    border-radius: 15px;
-    height: 200px;
-    width: 150px;
-    position: absolute;
-    padding: 36px;
-    top: 120px;
-    left: 250px;
-    cursor: pointer;
-    transition: .5s;
-}
-
-.dia-2 {
-    background-color: #059481;
-    border: 3px solid #059481;
-    color: #fff;
-    font-size: 20px;
-    border-radius: 15px;
-    height: 200px;
-    width: 150px;
-    position: absolute;
-    padding: 36px;
-    top: 120px;
-    left: 425px;
-    cursor: pointer;
-    transition: .5s;
-}
-.dia-3 {
-    background-color: #059481;
-    border: 3px solid #059481;
-    color: #fff;
-    font-size: 20px;
-    border-radius: 15px;
-    height: 200px;
-    width: 150px;
-    position: absolute;
-    padding: 36px;
-    top: 120px;
-    left: 600px;
-    cursor: pointer;
-    transition: .5s;
-}
-.dia-4 {
-    background-color: #059481;
-    border: 3px solid #059481;
-    color: #fff;
-    font-size: 20px;
-    border-radius: 15px;
-    height: 200px;
-    width: 150px;
-    position: absolute;
-    padding: 36px;
-    top: 120px;
-    left: 775px;
-    cursor: pointer;
-    transition: .5s;
-}
-.dia-5 {
-    background-color: #059481;
-    border: 3px solid #059481;
-    color: #fff;
-    font-size: 20px;
-    border-radius: 15px;
-    height: 200px;
-    width: 150px;
-    position: absolute;
-    padding: 36px;
-    top: 120px;
-    left: 950px;
-    cursor: pointer;
-    transition: .5s;
-}
-
-.referencia {
-    font-family: 'Ubuntu', sans-serif;
+.title-agenda {
+    font-family: 'Roboto', sans-serif;
     text-align: center;
     font-size: 40px;
     font-weight: 500;
-    margin-bottom: 60px;
-    padding-bottom: 20px;
+    color: #fff;
+    position: relative;
+    margin-top: 30px;
+} 
+
+/*Dia*/
+.qtd {
     position: absolute;
     color: #fff;
-    top: 20px;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    font-size: 23px;
+    top: 145px;
+    left: 900px;
 }
 
-.referencia::before {
-    content: "";
+.dia {
     position: absolute;
-    bottom: 0;
-    left: 50%;
-    width: 180px;
-    height: 3px;
-    background: #fff;
-    transform: translateX(-50%);
-}
-
-.referencia::after {
-    position: absolute;
-    bottom: -12px;
-    left: 50%;
-    font-size: 20px;
-    background: #fff;
-    color: #059481;
-    padding: 5px;
-    transform: translateX(-50%);
-}
-
-.alter:hover {
-    color: #059481;
+    height: 40px;
+    width: 90px;
+    top: 175px;
+    left: 900px;
+    border-radius: 6px;
+    font-size: 15px;
     background: none;
-    transform: scale(1.05);
+    color: #fff;
 }
 
-.content-horario {
-    background: #fff;
-    height: 445px;
-    width: 90vw;
+.opt {
+    color: #111;
+}
+
+.dia:hover {
+    color: #059481;
+    font-size: 16px;
+    border: 2px solid #059481;
+    transition: color 0.3s ease;
+}
+/*Fim Dia*/
+
+/*Semana*/
+.semana {
     position: absolute;
-    top: 400px;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    font-size: 23px;
+    top: 145px;
+    left: 620px;
+}
+
+.semanas {
+    position: absolute;
+    height: 40px;
+    width: 100px;
+    top: 175px;
+    left: 620;
+    border-radius: 6px;
+    font-size: 15px;
+    background: none;
+    color: #fff;
+}
+
+.sem {
+    color: #111;
+}
+
+.semanas:hover {
+    color: #059481;
+    font-size: 16px;
+    border: 2px solid #059481;
+    transition: color 0.3s ease;
+}
+/*Fim Semana*/
+
+/*Mês*/
+.TxtMes {
+    position: absolute;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    font-size: 23px;
+    top: 145px;
+    left: 350px;
+}
+
+.meses {
+    position: absolute;
+    height: 40px;
+    width: 100px;
+    top: 175px;
+    left: 350;
+    border-radius: 6px;
+    font-size: 15px;
+    background: none;
+    color: #fff;
+}
+
+.mes {
+    color: #111;
+}
+
+.meses:hover {
+    color: #059481;
+    font-size: 16px;
+    border: 2px solid #059481;
+    transition: color 0.3s ease;
+}
+/*Fim Mês*/
+
+.secao-dia {
+    align-items: center;
+    height: 50%;
+    width: 100%;
+    background-color: #111;
+    display: relative;
+    float: bottom;
+}
+
+.space {
+    background-color: #ecf0f1;
+    border: 4px solid rgb(209, 207, 207);
+    border-radius: 6px;
+    height: 400px;
+    width: 1000px;
+    position: relative;
+    left: 160px;
+}
+
+.box {
+    justify-content: center;
+    height: 250px;
+    width: 370px;
+    background-color: #059481;
     display: flex;
 }
 
-.horarios-grid {
-    display: grid;
-    row-gap: 0px;
-    grid-template-columns: 400px 400px 400px;
-    grid-template-rows: 100px 100px 100px;
-    justify-items: center;
-    font-family: 'Roboto', sans-serif;
-    font-size: 25px;
-    position: absolute;
-    top: 75px;
-    left: 18px;
-}
-
-.text {
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-    text-align: center;
-}
-
-.text-horarioQTD {
-    font-family: 'Roboto', sans-serif;
-    font-size: 25px;
-    left: 95px;
-    position: absolute;
-    top: 350px;
-    color: #fff;
-}
-
-.text-horarioATD {
-    font-family: 'Roboto', sans-serif;
-    font-size: 25px;
-    left: 35px;
-    position: absolute;
-    top: 10px;
-}
-
-.field {
-    width: 70px;
-    height: 35px;
-    border: 1px solid #fff;
-    background: none;
+.secao-details {
+    display: block;
+    justify-content: center;
+    height: 225px;
+    width: 335px;
+    background-color: #059481;
     border-radius: 6px;
-    outline: none;
-    padding: 0 15px;
-    font-size: 17px;
+    position: relative;
+    top: -170px;
+    left: 600px;
+}
+
+.position-ent {
+    position: relative;
+    top: 30px;
+    left: 50px;
+}
+
+.ent {
+    width: 80px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
     font-family: 'Roboto', sans-serif;
-    position: absolute;
-    top: -1px;
-    left: 720px;
-    cursor: pointer;
-    color: #fff;
+    font-size: 16px;
+    outline: none;
 }
 
-.field::placeholder {
-    color: #fff;
+.ent:hover {
+    transform: scale(1.05);
+    transition: all 0.3s ease;
 }
 
-.field:active , .field:focus {
-    border: 2px solid #059481;
-    color:#fff;
-    transition: .3s;
+.position-sai {
+    position: relative;
+    top: 0px;
+    left: 200px;
 }
 
-.field[type="number"]::-webkit-outer-spin-button,
-.field[type="number"]::-webkit-inner-spin-button {
+.sai {
+    width: 80px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    outline: none;
+}
+
+.sai:hover {
+    transform: scale(1.05);
+    transition: all 0.3s ease;
+}
+
+.position-int {
+    position: relative;
+    top: 30px;
+    left: 50px;
+}
+
+.int {
+    width: 80px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    outline: none;
+}
+
+.int:hover {
+    transform: scale(1.05);
+    transition: all 0.3s ease;
+}
+
+.position-ret {
+    position: relative;
+    top: 0px;
+    left: 200px;
+}
+
+.ret {
+    width: 80px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    outline: none;
+}
+
+.ret:hover {
+    transform: scale(1.05);
+    transition: all 0.3s ease;
+}
+
+.position-pac {
+    position: relative;
+    top: 30px;
+    left: 50px;
+}
+
+.pac {
+    width: 80px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    outline: none;
+}
+
+.pac:hover {
+    transform: scale(1.05);
+    transition: all 0.3s ease;
+}
+
+.pac[type="number"]::-webkit-outer-spin-button,
+.pac[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
 
-.field[type="number"] {
+.pac[type="number"] {
     -moz-appearance: textfield;
 }
 
-.horario[type="time"] {
-    width: 120px;
-    height: 50px;
-    border: 2px solid #ccc;
-    border-radius: 6px;
-    outline: none;
-    padding: 0 15px;
-    font-size: 15px;
-    font-family: 'Roboto', sans-serif;
-    transition: .8s;
-}
-
-.panel {
-    background-color: #059481;
-    width:375px;
-    height: 70px;
-    border-radius: 6px;
+.info {
     color: #fff;
-    display: flex;
-    align-items: center;
-    transition: .6s;
 }
 
-.panel:hover {
-    color: #111;
+.check {
+    position: relative;
+    top: 20px;
+    left: 225px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 50px;
     background: #fff;
-    border: 3px solid #059481;
-    transform: scale(1.05);
-}
-
-.horario:hover {
-    border: 3px solid #059481;
-    transform: scale(1.05);
-}
-
-.salvar {
-    position: fixed;
-    width: 41px;
-    height: 45px;
-    right: 18px;
-    bottom: 20px;
-    text-align: center;
-    line-height: 50px;
-    color: #fff;
-    background: #059481;
-    border-radius: 6px;
-    border: 1px solid #059481;
-    font-size: 30px;
-    z-index: 20;
-    cursor: pointer;
-    opacity: 1;
-    transition: all 0.3s ease;
-}
-
-.voltar {
-    position: fixed;
-    width: 41px;
-    height: 45px;
-    left: 30px;
-    bottom: 20px;
-    text-align: center;
-    line-height: 50px;
-    color: #fff;
-    background: #059481;
     border-radius: 6px;
     font-size: 30px;
     z-index: 20;
@@ -314,23 +323,11 @@ html {
     transition: all 0.3s ease;
 }
 
-.fa-arrow-left {
+.fa-check {
     position:absolute;
-    top: 8px;
-    left: 8px;
+    top: 9px;
+    left: 9px;
+    cursor: pointer;
 }
 
-.fa-floppy-disk {
-    position:absolute;
-    top: 7px;
-    left: 7px;
-}
-
-.link-color {
-    color: #fff;
-}
 /*Final Style*/
-
-/*Responsivo*/
-
-/*Fim Responsivo*/
