--- a/src/definir-horarios/view/definir-horarios.html
+++ b/src/definir-horarios/view/definir-horarios.html
@@ -9,8 +9,15 @@
 
 <body>
 <div class="container">
+
     <div class="sets">
         <h2 class="title-agenda">Definir Agenda</h2>
+
+        <a class="nav-link" href="../../../index.html">
+        <div class="voltar">
+            <i class="fa-solid fa-arrow-left"></i>
+        </div>
+        </a>
 
         <p class="TxtMes">Mês</p>
             <select name="meses" class="meses">
@@ -46,8 +53,44 @@
     <div class="secao-dia">
 
         <div class="space">
+            <h3 class="title-dia">Segunda-Feira</h3>
             <div class="box">
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX 
+                    
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
 
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+                    
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+                    
+                </div>
             </div>
             
             <div class="secao-details">
@@ -78,14 +121,396 @@
                 </div>
 
                 <div class="check">
-                    <button class="confirmar">
                         <i class="fa-solid fa-check"></i>
-                    </button>
                 </div>
             </div>
         </div>
     </div>
-    
+
+    <div class="secao-dia">
+
+        <div class="space terca">
+            <h3 class="title-dia">Terça-Feira</h3>
+            <div class="box">
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX 
+                    
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+                    
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+                    
+                </div>
+            </div>
+            
+            <div class="secao-details">
+
+                <div class="position-ent ent">
+                    <p class="info">Entrada</p>
+                        <input class="ent" type="time" min="06:00" max="23:00" required>
+                </div>
+                
+                <div class="position-sai sai">
+                    <p class="info">Saida</p>
+                        <input class="sai" type="time" min="06:00" max="23:00" required>
+                </div>
+                
+                <div class="position-int int">
+                    <p class="info">Intervalo</p>
+                        <input class="int" type="time" min="06:00" max="23:00" required>
+                </div>
+
+                <div class="position-ret ret">
+                    <p class="info">Retorno</p>
+                        <input class="ret" type="time" min="06:00" max="23:00" required>
+                </div>
+
+                <div class="position-pac pac">
+                    <p class="info">Pacientes</p>
+                        <input class="pac" type="number" required>
+                </div>
+
+                <div class="check">
+                        <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="secao-dia">
+
+        <div class="space quarta">
+            <h3 class="title-dia">Quarta-Feira</h3>
+            <div class="box">
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX 
+                    
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+                    
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+                    
+                </div>
+            </div>
+            
+            <div class="secao-details">
+
+                <div class="position-ent ent">
+                    <p class="info">Entrada</p>
+                        <input class="ent" type="time" min="06:00" max="23:00" required>
+                </div>
+                
+                <div class="position-sai sai">
+                    <p class="info">Saida</p>
+                        <input class="sai" type="time" min="06:00" max="23:00" required>
+                </div>
+                
+                <div class="position-int int">
+                    <p class="info">Intervalo</p>
+                        <input class="int" type="time" min="06:00" max="23:00" required>
+                </div>
+
+                <div class="position-ret ret">
+                    <p class="info">Retorno</p>
+                        <input class="ret" type="time" min="06:00" max="23:00" required>
+                </div>
+
+                <div class="position-pac pac">
+                    <p class="info">Pacientes</p>
+                        <input class="pac" type="number" required>
+                </div>
+
+                <div class="check">
+                        <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="secao-dia">
+
+        <div class="space quinta">
+            <h3 class="title-dia">Quinta-Feira</h3>
+            <div class="box">
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX 
+                    
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+                    
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+                    
+                </div>
+            </div>
+            
+            <div class="secao-details">
+
+                <div class="position-ent ent">
+                    <p class="info">Entrada</p>
+                        <input class="ent" type="time" min="06:00" max="23:00" required>
+                </div>
+                
+                <div class="position-sai sai">
+                    <p class="info">Saida</p>
+                        <input class="sai" type="time" min="06:00" max="23:00" required>
+                </div>
+                
+                <div class="position-int int">
+                    <p class="info">Intervalo</p>
+                        <input class="int" type="time" min="06:00" max="23:00" required>
+                </div>
+
+                <div class="position-ret ret">
+                    <p class="info">Retorno</p>
+                        <input class="ret" type="time" min="06:00" max="23:00" required>
+                </div>
+
+                <div class="position-pac pac">
+                    <p class="info">Pacientes</p>
+                        <input class="pac" type="number" required>
+                </div>
+
+                <div class="check">
+                        <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="secao-dia">
+
+        <div class="space sexta">
+            <h3 class="title-dia">Sexta-Feira</h3>
+            <div class="box">
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX 
+                    
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+                    
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+                    
+                </div>
+            </div>
+            
+            <div class="secao-details">
+
+                <div class="position-ent ent">
+                    <p class="info">Entrada</p>
+                        <input class="ent" type="time" min="06:00" max="23:00" required>
+                </div>
+                
+                <div class="position-sai sai">
+                    <p class="info">Saida</p>
+                        <input class="sai" type="time" min="06:00" max="23:00" required>
+                </div>
+                
+                <div class="position-int int">
+                    <p class="info">Intervalo</p>
+                        <input class="int" type="time" min="06:00" max="23:00" required>
+                </div>
+
+                <div class="position-ret ret">
+                    <p class="info">Retorno</p>
+                        <input class="ret" type="time" min="06:00" max="23:00" required>
+                </div>
+
+                <div class="position-pac pac">
+                    <p class="info">Pacientes</p>
+                        <input class="pac" type="number" required>
+                </div>
+
+                <div class="check">
+                        <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="secao-dia">
+
+        <div class="space sabado">
+            <h3 class="title-dia">Sábado</h3>
+            <div class="box">
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX 
+                    
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+                    
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+
+                </div>
+                <div class="grid-item">Das XX/XX as&nbsp; XX/XX
+                    
+                </div>
+            </div>
+            
+            <div class="secao-details">
+
+                <div class="position-ent ent">
+                    <p class="info">Entrada</p>
+                        <input class="ent" type="time" min="06:00" max="23:00" required>
+                </div>
+                
+                <div class="position-sai sai">
+                    <p class="info">Saida</p>
+                        <input class="sai" type="time" min="06:00" max="23:00" required>
+                </div>
+                
+                <div class="position-int int">
+                    <p class="info">Intervalo</p>
+                        <input class="int" type="time" min="06:00" max="23:00" required>
+                </div>
+
+                <div class="position-ret ret">
+                    <p class="info">Retorno</p>
+                        <input class="ret" type="time" min="06:00" max="23:00" required>
+                </div>
+
+                <div class="position-pac pac">
+                    <p class="info">Pacientes</p>
+                        <input class="pac" type="number" required>
+                </div>
+
+                <div class="check">
+                        <i class="fa-solid fa-check"></i>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
 </body>
