--- a/src/definir-horarios/view/style-horario.css
+++ b/src/definir-horarios/view/style-horario.css
@@ -8,6 +8,7 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    background-color: #111;
 }
 
 html {
@@ -18,7 +19,7 @@ html {
 /*Início Style*/
 .container {
     justify-content: center;
-    height: 1000px;
+    height: 100%;
     width: 100%;
     background-color: #fff;
     position: relative
@@ -27,7 +28,7 @@ html {
 .sets {
     display: flex;
     justify-content: center;
-    height: 300px;
+    height: 100%;
     width: 100%;
     background-color: #111;
     position: relative
@@ -64,6 +65,7 @@ html {
     font-size: 15px;
     background: none;
     color: #fff;
+    cursor: pointer;
 }
 
 .opt {
@@ -99,6 +101,7 @@ html {
     font-size: 15px;
     background: none;
     color: #fff;
+    cursor: pointer;
 }
 
 .sem {
@@ -134,6 +137,7 @@ html {
     font-size: 15px;
     background: none;
     color: #fff;
+    cursor: pointer;
 }
 
 .mes {
@@ -165,14 +169,34 @@ html {
     width: 1000px;
     position: relative;
     left: 160px;
+    top: -400px;
 }
 
 .box {
-    justify-content: center;
     height: 250px;
     width: 370px;
+    display: inline-grid;
+    grid-template-columns: auto auto auto auto auto auto;
+    row-gap: 50px;
+    column-gap: 20px;
+}
+
+.grid-item {
+    position: relative;
+    top: 70px;
+    left: 30px;
     background-color: #059481;
-    display: flex;
+    height: 100px;
+    width: 70px;
+    border-radius: 5px;
+    text-align: center;
+    color: #fff;
+}
+
+.grid-item:hover {
+    transform: scale(1.05);
+    transition: all 0.3s ease;
+    cursor: pointer;
 }
 
 .secao-details {
@@ -184,7 +208,7 @@ html {
     border-radius: 6px;
     position: relative;
     top: -170px;
-    left: 600px;
+    left: 620px;
 }
 
 .position-ent {
@@ -201,6 +225,7 @@ html {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     outline: none;
+    cursor: pointer;
 }
 
 .ent:hover {
@@ -222,6 +247,7 @@ html {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     outline: none;
+    cursor: pointer;
 }
 
 .sai:hover {
@@ -243,6 +269,7 @@ html {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     outline: none;
+    cursor: pointer;
 }
 
 .int:hover {
@@ -264,6 +291,7 @@ html {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     outline: none;
+    cursor: pointer;
 }
 
 .ret:hover {
@@ -321,13 +349,73 @@ html {
     cursor: pointer;
     opacity: 1;
     transition: all 0.3s ease;
+    cursor: pointer;
 }
 
 .fa-check {
     position:absolute;
-    top: 9px;
-    left: 9px;
+    top: 1px;
+    left: 2px;
     cursor: pointer;
 }
 
+.title-dia {
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 500;
+    color: #111;
+    position: relative;
+    top: 25px;
+} 
+
+.terca {
+    position: relative;
+    top: -300px;
+}
+
+.quarta {
+    position: relative;
+    top: -200px;
+}
+
+.quinta {
+    position: relative;
+    top: -100px;
+}
+
+.sexta {
+    position: relative;
+    top: 0px;
+}
+
+.sabado {
+    position: relative;
+    top: 100px;
+}
+
+.voltar {
+    position: relative;
+    top: 15px;
+    left: -750px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 50px;
+    background: #059481;
+    border-radius: 6px;
+    font-size: 30px;
+    z-index: 20;
+    cursor: pointer;
+    opacity: 1;
+    transition: all 0.3s ease;
+}
+
+.fa-arrow-left {
+    position:absolute;
+    top: 6px;
+    left: 8px;
+    cursor: pointer;
+    color:#fff;
+}
 /*Final Style*/
