--- a/src/definir-horarios/view/definir-horarios.html
+++ b/src/definir-horarios/view/definir-horarios.html
@@ -13,7 +13,7 @@
     <div class="sets">
         <h2 class="title-agenda">Definir Agenda</h2>
 
-        <a class="nav-link" href="../../../index.html">
+        <a class="nav-link" href="../../../index.php">
         <div class="voltar">
             <i class="fa-solid fa-arrow-left"></i>
         </div>
@@ -516,5 +516,4 @@
 </body>
 
 <script src="../../../js/jquery-3.6.0.js"></script>
-<script src="../../../js/moment.js"></script>
 <script src="/src/definir-horarios/control/definir-horarios.js"></script>
