--- a/src/agendamento/view/agendamento.html
+++ b/src/agendamento/view/agendamento.html
@@ -2,25 +2,168 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="/src/agendamento/view/agendamento.css">
+<link rel="stylesheet" href="/src/agendamento/view/style-agendamento.css">
 <link rel="stylesheet" href="/libs/fontawesome/css/all.css">
 <link rel="icon" href="./img/Logo kg.png" type="image/x-icon">
-<title>Agendamento</title>
+<title>Definir horários</title>
 
 <body>
-    <div class="container">
+<div class="container">
 
-        <!--Exibe doutores-->
-            <div class="doutores">
-                <h2 class="title-dout">Doutores</h2>
+    <div class="sets">
+        <h2 class="title-agenda">Agendar</h2>
 
+        <a href="../../../index.html">
+        <h3 class="sair">Sair</h3>
+        </a>
+
+        <h3 class="corpo">Realize o agendamento da sua consulta apenas selecionando o horário disponível nos respectivos dias disponíveis.<br>
+                          Após a seleção do horário desejado, você deverá escolher o tratamento a ser feito dentre os oferecidos, e por fim gerar sua ficha para ser atendido.
+        </h3>
+
+        <h2 class="separacao">Agenda da Doutora Jéssica:</h2>
+
+        <div class="space terca">
+            <h3 class="title-dia">Terça-Feira:</h3>
+            <div class="secao-dia">
+                <div class="grid-item" id="grid-item0"><br>Das 08:00 &nbsp;as&nbsp; 09:00 
+                    
+                </div>
+                <div class="grid-item" id="grid-item1"><br>Das 09:00 &nbsp;as&nbsp; 10:00
+
+                </div>
+                <div class="grid-item" id="grid-item2"><br>Das 10:00 &nbsp;as&nbsp; &nbsp;11:00
+
+                </div>
+                <div class="grid-item" id="grid-item3"><br>Das 11:00 <br>as<br> 12:00
+
+                </div>
+                <div class="grid-item" id="grid-item4"><br>Das 14:00 &nbsp;as&nbsp; 15:00
+                    
+                </div>
+                <div class="grid-item" id="grid-item5"><br>Das 15:00 &nbsp;as&nbsp; 16:00
+
+                </div>
+                <div class="grid-item" id="grid-item6"><br>Das 16:00 &nbsp;as&nbsp; 17:00
+
+                </div>
+                <div class="grid-item" id="grid-item7"><br>Das 17:00 &nbsp;as&nbsp; 18:00
+
+                </div>
             </div>
+        </div>
 
-         <!--Exibe horarios disponiveis e nao disponiveis-->
-            <div class="horarios-doutor">
-                <h2 class="title-dia">Dias e Horários</h2>
+        <div class="space quarta">
+            <h3 class="title-dia">Quarta-Feira:</h3>
+            <div class="secao-dia">
+                <div class="grid-item" id="grid-item8"><br>Das 08:00 &nbsp;as&nbsp; 09:00 
+                    
+                </div>
+                <div class="grid-item" id="grid-item9"><br>Das 09:00 &nbsp;as&nbsp; 10:00
+
+                </div>
+                <div class="grid-item" id="grid-item10"><br>Das 10:00 &nbsp;as&nbsp; &nbsp;11:00
+
+                </div>
+                <div class="grid-item" id="grid-item11"><br>Das 11:00 <br>as<br> 12:00
+
+                </div>
+                <div class="grid-item" id="grid-item12"><br>Das 14:00 &nbsp;as&nbsp; 15:00
+                    
+                </div>
+                <div class="grid-item" id="grid-item13"><br>Das 15:00 &nbsp;as&nbsp; 16:00
+
+                </div>
+                <div class="grid-item" id="grid-item14"><br>Das 16:00 &nbsp;as&nbsp; 17:00
+
+                </div>
+                <div class="grid-item" id="grid-item15"><br>Das 17:00 &nbsp;as&nbsp; 18:00
+
+                </div>
             </div>
+        </div>
+
+        <div class="space quarta">
+            <h3 class="title-dia">Quinta-Feira:</h3>
+            <div class="secao-dia">
+                <div class="grid-item" id="grid-item16"><br>Das 08:00 &nbsp;as&nbsp; 09:00 
+                    
+                </div>
+                <div class="grid-item" id="grid-item17"><br>Das 09:00 &nbsp;as&nbsp; 10:00
+
+                </div>
+                <div class="grid-item" id="grid-item18"><br>Das 10:00 &nbsp;as&nbsp; &nbsp;11:00
+
+                </div>
+                <div class="grid-item" id="grid-item19"><br>Das 11:00 <br>as<br> 12:00
+
+                </div>
+                <div class="grid-item" id="grid-item20"><br>Das 14:00 &nbsp;as&nbsp; 15:00
+                    
+                </div>
+                <div class="grid-item" id="grid-item21"><br>Das 15:00 &nbsp;as&nbsp; 16:00
+
+                </div>
+                <div class="grid-item" id="grid-item22"><br>Das 16:00 &nbsp;as&nbsp; 17:00
+
+                </div>
+                <div class="grid-item" id="grid-item23"><br>Das 17:00 &nbsp;as&nbsp; 18:00
+
+                </div>
+            </div>
+        </div> 
+
+        <div class="space quarta">
+            <h3 class="title-dia">Sexta-Feira:</h3>
+            <div class="secao-dia">
+                <div class="grid-item" id="grid-item24"><br>Das 08:00 &nbsp;as&nbsp; 09:00 
+                    
+                </div>
+                <div class="grid-item" id="grid-item25"><br>Das 09:00 &nbsp;as&nbsp; 10:00
+
+                </div>
+                <div class="grid-item" id="grid-item26"><br>Das 10:00 &nbsp;as&nbsp; &nbsp;11:00
+
+                </div>
+                <div class="grid-item" id="grid-item27"><br>Das 11:00 <br>as<br> 12:00
+
+                </div>
+                <div class="grid-item" id="grid-item28"><br>Das 14:00 &nbsp;as&nbsp; 15:00
+                    
+                </div>
+                <div class="grid-item" id="grid-item29"><br>Das 15:00 &nbsp;as&nbsp; 16:00
+
+                </div>
+                <div class="grid-item" id="grid-item30"><br>Das 16:00 &nbsp;as&nbsp; 17:00
+
+                </div>
+                <div class="grid-item" id="grid-item31"><br>Das 17:00 &nbsp;as&nbsp; 18:00
+
+                </div>
+            </div>
+        </div>
+        <br>
+        <br>
     </div>
+
+    <!--Modal para visualizar perfil do doutor-->
+    <div id="modal-info" class="modal-container">
+        <div class="modal">
+            <h3 class="title">Escolha o tratamento a ser feito:</h3>
+                <select class="select" id='tratamento' required>
+                    <option id="volvo" selected>volvo</option>
+                    <option id="volvo1">aaaaaa</option>
+                </select>
+                    <input type="button" class="button" id="button-agendar" value="Agendar" disabled>
+                    <button class="fechar"><i class="fa-solid fa-arrow-left"></i></button>
+                    <button class="pdf" id="pdf-info" onclick="gerarPdf()"><i class="fa-regular fa-file-pdf fa-2x"></i></button>
+        </div>
+    </div>
+</div>
 </body>
 
 <script src="../../../js/jquery-3.6.0.js"></script>
+<script src="/src/agendamento/control/agendamento.js"></script>
+<script src="../../../libs/sweetAlert/dist/sweetalert2.min.js"></script>
+<link rel="stylesheet" href="../../../libs/sweetAlert/dist/sweetalert2.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/" crossorigin="anonymous"></script>
